DC-3111 - make sure "current page source" also always exists in child threads, even they do not open new templates.